[package]
name = "loadgen"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
reqwest = { version = "=0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
url = "=2.4.1"
idna = "=0.4.0"
indexmap = "=2.2.6"
native-tls = "=0.2.11"
